minor changes and cleanup

--- a/dots/.config/hypr/config/autostart.conf
+++ b/dots/.config/hypr/config/autostart.conf
@@ -13,7 +13,7 @@ exec-once = polkit-agent-helper-1
 exec-once = systemctl start --user polkit-mate-authentication-agent-1
 
 # DESKTOP
-#exec-once = hyprpaper &
+exec-once = hyprpaper &
 exec-once = swww-daemon &
 exec-once = swaync &
 exec-once = waybar &
