--- a/dots/.config/hypr/hyprpaper.conf
+++ b/dots/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/sharath/Pictures/wallpaper.png
-wallpaper = eDP-1, /home/sharath/Pictures/wallpaper.png
+preload = $HOME/.dotfiles/.misc/Pictures/tokyonight/street-tn.png
+wallpaper = eDP-1, $HOME/.dotfiles/.misc/Pictures/tokyonight/street-tn.png
