--- a/dots/.config/hypr/hyprlock.conf
+++ b/dots/.config/hypr/hyprlock.conf
@@ -67,7 +67,7 @@ label {
 # Profie-Photo
 image {
     monitor =
-    path = ~/.dotfiles/.conf/Pictures/gintoki.jpg
+    path = ~/.dotfiles/.misc/Pictures/gintoki.jpg
     border_color = 0xffdddddd
     border_size = 0
     size = 120
