--- a/dots/.config/waybar/config.jsonc
+++ b/dots/.config/waybar/config.jsonc
@@ -37,7 +37,6 @@
     "backlight",
     "network",
     "pulseaudio",
-    "pulseaudio#microphone",
     "custom/updates",
     "custom/r_end",
     "custom/l_end",
@@ -124,7 +123,7 @@
     "persistent-workspaces": {},
   },
   "hyprland/window": {
-    "format": " {}",
+    "format": " {}",
     "rotate": 0,
     "separate-outputs": true,
     "max-length": 50,
@@ -181,19 +180,17 @@
     "scroll-step": 5,
   },
   "privacy": {
-    "icon-size": 12,
+    "rotate": 0,
     "icon-spacing": 5,
     "transition-duration": 250,
     "modules": [
       {
         "type": "screenshare",
         "tooltip": true,
-        "tooltip-icon-size": 24,
       },
       {
         "type": "audio-in",
         "tooltip": true,
-        "tooltip-icon-size": 24,
       },
     ],
   },
