migrating from arch to fedora

--- a/dots/.config/waybar/config.jsonc
+++ b/dots/.config/waybar/config.jsonc
@@ -262,6 +262,8 @@
     "on-click-release": "swaync-client -t -sw",
     "on-click-right": "swaync-client -d -sw",
     "escape": true,
+    "tooltip": true,
+    "tooltip-format": " Notification Center",
   },
   "custom/clipboard": {
     "format": "{}",
