--- a/dots/.config/hypr/config/envar.conf
+++ b/dots/.config/hypr/config/envar.conf
@@ -20,7 +20,11 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = GDK_SCALE,1
+env = GDK_DPI_SCALE,1
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = MOZ_ENABLE_WAYLAND,1
 env = OZONE_PLATFORM,wayland
 env = WLR_RENDERER_ALLOW_SOFTWARE, 1
+env = WLR_DRM_NO_MODIFIERS,1
+env = WLR_NO_HARDWARE_CURSORS,1
+env = XFT_DPI,96
