--- a/dots/.config/hypr/config/monitors.conf
+++ b/dots/.config/hypr/config/monitors.conf
@@ -4,6 +4,6 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto
+monitor=,preferred,auto,auto
 
-monitor = eDP-1, 1366x768@60.06Hz, 0x0, 1
+# monitor = eDP-1, 1366x768@60.06Hz, 0x0, 1
