--- a/dots/.config/swaync/config.json
+++ b/dots/.config/swaync/config.json
@@ -2,32 +2,26 @@
   "$schema": "/etc/xdg/swaync/configSchema.json",
   "positionX": "right",
   "positionY": "top",
-  "cssPriority": "user",
-
-  "control-center-width": 330,
-  "control-center-height": 650,
-  "control-center-margin-top": 2,
+  "layer": "overlay",
+  "control-center-margin-top": 20,
   "control-center-margin-bottom": 2,
-  "control-center-margin-right": 1,
-  "control-center-margin-left": 0,
-
-  "notification-body-text-size": 11,
-  "notification-header-text-size": 12,
-  "notification-window-width": 400,
+  "control-center-margin-right": 20,
+  "control-center-margin-left": 20,
   "notification-icon-size": 48,
   "notification-body-image-height": 160,
-  "notification-body-image-width": 200,
-
-  "timeout": 4,
-  "timeout-low": 2,
-  "timeout-critical": 6,
-
+  "notification-body-image-width": 90,
+  "timeout": 6,
+  "timeout-low": 4,
+  "timeout-critical": 0,
   "fit-to-screen": false,
+  "control-center-width": 430,
+  "control-center-height": 1000,
+  "notification-window-width": 366,
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
-  "transition-time": 200,
-  "hide-on-clear": false,
-  "hide-on-action": false,
+  "transition-time": 100,
+  "hide-on-clear": true,
+  "hide-on-action": true,
   "script-fail-notify": true,
   "scripts": {
     "example-script": {
@@ -42,44 +36,94 @@
       "app-name": "Spotify"
     }
   },
-  "widgets": ["buttons-grid", "mpris", "title", "dnd", "notifications"],
+  "widgets": [
+    "label",
+    "menubar",
+    "volume",
+    "mpris",
+    "title",
+    "dnd",
+    "notifications"
+  ],
   "widget-config": {
     "title": {
       "text": "Notifications",
       "clear-all-button": true,
-      "button-text": " 󰎟 "
+      "button-text": "Clear All"
     },
     "dnd": {
-      "text": "Do not disturb"
+      "text": "Do Not Disturb"
+    },
+    "label": {
+      "max-lines": 1,
+      "text": "Controll Center"
     },
     "mpris": {
-      "image-size": 40,
-      "image-radius": 12
+      "image-size": 96,
+      "image-radius": 6
+    },
+    "backlight": {
+      "label": "",
+      "device": "intel_backlight",
+      "min": 10
+    },
+    "backlight#KB": {
+      "label": " ",
+      "device": "asus::kbd_backlight",
+      "subsystem": "leds"
     },
     "volume": {
-      "label": "󰕾",
-      "show-per-app": true
+      "label": ""
     },
-    "buttons-grid": {
-      "actions": [
-        {
-          "label": " ",
-          "command": "pavucontrol"
-        },
-        {
-          "label": "󰂯",
-          "command": "blueman-manager"
-        },
-        {
-          "label": " ",
-          "command": "nm-connection-editor"
-        },
-        {
-          "label": "󰾅",
-          "command": "~/.config/hypr/scripts/pwrProfiles.sh toggle",
-          "type": "command"
-        }
-      ]
+    "menubar": {
+      "menu#network-buttons": {
+        "label": "",
+        "position": "center",
+        "actions": [
+          {
+            "label": "Network Settings",
+            "command": "nm-connection-editor"
+          }
+        ]
+      },
+      "menu#bluetooth-buttons": {
+        "label": "",
+        "position": "center",
+        "actions": [
+          {
+            "label": "Bluetooth Manager",
+            "command": "blueman"
+          }
+        ]
+      },
+      "menu#settings": {
+        "label": "",
+        "position": "center",
+        "actions": [
+          {
+            "label": "Hyprland Configuration",
+            "command": "kitty --title browser sh -c $HOME/.config/hypr/scripts/settings.sh"
+          }
+        ]
+      },
+      "menu#powermode-buttons": {
+        "label": "",
+        "position": "center",
+        "actions": [
+          {
+            "label": " Performance",
+            "command": "powerprofilesctl set performance"
+          },
+          {
+            "label": " Balanced",
+            "command": "powerprofilesctl set balanced"
+          },
+          {
+            "label": " Power-saver",
+            "command": "powerprofilesctl set power-saver"
+          }
+        ]
+      }
     }
   }
 }
