--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,4 +1,8 @@
 unbind C-b
+unbind '"'
+unbind %
+unbind z
+
 set-option -g prefix C-i
 set -g set-clipboard on
 set -g mouse on
@@ -17,10 +21,16 @@ bind l select-pane -R
 bind k select-pane -U
 bind j select-pane -D
 
+bind -n M-h resize-pane -L 5
+bind -n M-l resize-pane -R 5
+bind -n M-k resize-pane -U 5
+bind -n M-j resize-pane -D 5
+
+
 # open new panes in pwd
 bind c new-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind '"' split-window -v -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 
 # tpm
 set -g @plugin 'tmux-plugins/tpm'
