Personal changes for ergonomics

--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -1,7 +1,6 @@
 unbind C-b
 unbind '"'
 unbind %
-unbind z
 
 set-option -g prefix C-i
 set -g set-clipboard on
@@ -29,7 +28,7 @@ bind -n M-j resize-pane -D 5
 
 # open new panes in pwd
 bind c new-window -c "#{pane_current_path}"
-bind s split-window -v -c "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 # tpm
@@ -57,7 +56,5 @@ set -g @tokyo-night-tmux_path_format relative
 set -g @tokyo-night-tmux_date_format hide
 set -g @tokyo-night-tmux_time_format 12H
 
-### Vim - Tmux navigator
-set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
