--- a/dots/.config/hypr/config/autostart.conf
+++ b/dots/.config/hypr/config/autostart.conf
@@ -4,7 +4,7 @@
 #################
 
 # SYSTEM
-# exec-once = /usr/libexec/polkit-mate-authentication-agent-1 &
+exec-once = /usr/libexec/polkit-mate-authentication-agent-1 &
 # exec-once = xwaylandvideobridge &
 # exec-once = wl-paste --type text --watch clipman store --max-items=15
 exec-once = wl-paste --watch | cliphist store -max-items 200
