--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -2,7 +2,7 @@ unbind C-b
 unbind '"'
 unbind %
 
-set-option -g prefix C-i
+set-option -g prefix C-m
 set -g set-clipboard on
 set -g mouse on
 set-option -g status-position top 
@@ -28,7 +28,7 @@ bind -n M-j resize-pane -D 5
 
 # open new panes in pwd
 bind c new-window -c "#{pane_current_path}"
-bind h split-window -v -c "#{pane_current_path}"
+bind b split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 # tpm
